# mcp-universal-adapter

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  FIXES_APPLIED.md  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  SCRUM_MASTER_REPORT.md  push.sh  pyproject.toml  test_workflow.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  preset_request.md
.github/workflows/: ci.yml
examples/demo_petstore/: petstore-openapi.yaml
src/mcp_adapter/: __init__.py  cli.py
src/mcp_adapter/generators/: __init__.py  base.py  python.py
src/mcp_adapter/models/: __init__.py  api_spec.py
src/mcp_adapter/parsers/: __init__.py  base.py  openapi.py
src/mcp_adapter/presets/: __init__.py
src/mcp_adapter/templates/python/: README.md.jinja2  pyproject.toml.jinja2  server.py.jinja2
src/mcp_adapter/validators/: __init__.py
tests/: __init__.py
tests/unit/: test_openapi_parser.py  test_python_generator.py
